kcloudessentials/4 - blue-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-app
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: blue
  template:
    metadata:
      labels:
        app.kubernetes.io/name: blue
    spec:
      containers:
        - name: blue-app
          image: hashicorp/http-echo
          args:
            - "-text=Blue App"
          ports:
            - containerPort: 8080
