kcloudessentials/6 - blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-svc
  namespace: production
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: blue
