kcloudessentials/8 - ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kloudessentials
  namespace: production
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: alb-kcloudessentials-group
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:616855574610:certificate/eb07f8c7-f275-40dc-906d-e1035da3625d
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
#    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
    - host: www.kcloudessentials.com
      http:
        paths:
          - path: /nginx
            pathType: Exact
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: blue-svc
                port:
                  number: 80
          - path: /green
            pathType: Prefix
            backend:
              service:
                name: green-svc 
                port:
                  number: 80
